# ibvs_perching

./: .dockerignore  CMakeLists.txt  README.md  package.xml
config/: apm_config.yaml  ibvs_params.yaml  plotjuggler_ibvs.xml  rc_to_joy.yaml
docker/: Dockerfile  README.md  build.sh  run.sh
docs/: code.html  controller.html  docker.html  index.html  joystick.html  simulation.html  style.css
launch/: ibvs_perching.launch  mavros_apm.launch  rc_to_joy.launch
models/ar_tag/: model.config  model.sdf
models/ar_tag/materials/scripts/: ar_tag.material
scripts/: aruco_detector.py  ibvs_controller.py  keyboard_rc.py  mock_ar_tag_publisher.py  rc_to_joy.py
startup/real_world/: rw_setup.sh  session.yml  shell_helpers.sh  start.sh
startup/real_world/custom_config/: ibvs_params_rw.yaml  rc_mapping.yaml  rc_to_joy.yaml
startup/sim_ibvs/: session.yml  start.sh
urdf/: kopterworx_downcam.urdf.xacro
