<?xml version="1.0"?>
<package format="2">
  <name>ibvs_perching</name>
  <version>0.0.0</version>
  <description>
    Image-Based Visual Servoing (IBVS) for AR-tag perching. Bypasses the
    uav_ros_stack tracker/controller and drives ArduPilot directly through
    mavros/setpoint_raw/attitude (body rates + thrust).
  </description>

  <maintainer email="jakob.domislovic@gmail.com">developer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
