<?xml version="1.0"?>
<package format="2">
  <name>ibvs_perching</name>
  <version>0.0.0</version>
  <description>
    Image-Based Visual Servoing (IBVS) for AR-tag perching. Bypasses the
    uav_ros_stack tracker/controller and drives ArduPilot directly through
    mavros/setpoint_raw/attitude (body rates + thrust).
  </description>

  <maintainer email="jakob.domislovic@gmail.com">developer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <!-- real world: mavros_apm.launch runs mavros_node directly (the apm
       pluginlists also pull plugins from mavros_extras) -->
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <export>
    <!-- lets gazebo resolve model://ar_tag (texture + material) -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
